<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DoDH2_Ls_1</string>
    <string name="toast">Toast</string>
    <string name="count">Count</string>
    <string name="default_num">0</string>
    <string name="viewmodel">Save Data by ViewModel</string>
    <string name="click_me">click me</string>
    <string name="start_activity">Start activity</string>
    <string name="close">close</string>
    <string name="language">Tiếng Việt</string>
    <string name="pre_key" tools:ignore="MissingTranslation">shared_key</string>
    <string name="language_pre_key" tools:ignore="MissingTranslation">language_pre_key</string>
    <string name="change_theme">Change theme</string>
    <string name="theme_pre_key" translatable="false">theme_pre_key</string>
    <string name="box_one" translatable="false">Box one</string>
    <string name="box_three" translatable="false">Box Three</string>
    <string name="box_four" translatable="false">Box Four</string>
    <string name="box_five" translatable="false">Box Five</string>
    <string name="box_two" translatable="false">Box Two</string>
    <string name="this_is_a_game" translatable="false">This is a game:</string>
    <string name="tap_the_screen_and_buttons" translatable="false">Tap the screen and buttons</string>
    <string name="red" translatable="false">RED</string>
    <string name="yellow" translatable="false">YELLOW</string>
    <string name="green" translatable="false">GREEN</string>
</resources>