<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ex1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textColor="@color/white"
            android:text="@string/count"
            android:textSize="24sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textColor="@color/white"
            android:text="@string/toast"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/txt_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:gravity="center"
            android:text="@string/default_num"
            android:textSize="100sp" />

        <CheckBox
            android:id="@+id/cbx_click_me"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:gravity="center"
            android:text="@string/click_me"
            android:textColor="@color/blue" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/start_activity"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/language"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_theme"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:background="@color/blue"
            android:text="@string/change_theme"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>