<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ex1.DataActivity">

    <TextView
        android:id="@+id/txt_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/default_num"
        android:textColor="@color/black"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@color/blue"
        android:text="@string/count"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/txt_num"
        app:layout_constraintStart_toStartOf="@+id/txt_num"
        app:layout_constraintTop_toBottomOf="@+id/txt_num" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/blue"
        android:text="@string/close"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_count"
        app:layout_constraintStart_toStartOf="@+id/btn_count"
        app:layout_constraintTop_toBottomOf="@+id/btn_count" />

</androidx.constraintlayout.widget.ConstraintLayout>